travailler sur title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="header">
-         <h1>IT.NEWS</h1>
+         <h1 class="header-title title">IT.NEWS</h1>
+         <h2 class="header-title title-red">IT.NEWS</h2>
+         <h2 class="header-title title-blue">IT.NEWS</h2>
+         
     </div>
 </body>
 </html> 
