Position for title

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <div class="header">
-         <h1 class="header-title title">IT.NEWS</h1>
+         <h1 class="header-title title-black">IT.NEWS</h1>
          <h2 class="header-title title-red">IT.NEWS</h2>
          <h2 class="header-title title-blue">IT.NEWS</h2>
+
+         <a href="#" class="header-btn">CLICK ME</a>
+         <div class="header-btn-red"></div>
+         <div class="header-btn-blue"></div>
          
     </div>
 </body>
