Make go up button

--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
          <div class="header-btn-blue"></div>
          
     </div>
+
+    <a class="go-up-btn" href="#">Go up</a>
 </body>
 </html> 
