--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon " href="img/photo pour le titre.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nouvelle-information</title>
@@ -19,5 +20,28 @@
     </div>
 
     <a class="go-up-btn" href="#">Go up</a>
+
+    <div class="articles-container">
+        <div class="article" >
+            <h2 class="article-title">Boston Dynamics представила коммерческого робота Stretch </h2>
+            <p class="article-category">Робототехника</p>
+            <img class="article-image" src="img/article1_pic.jpg" alt="">
+            <p class="article-text">Boston Dynamics представила нового коммерческого робота, предназначенного для работы на складах. Робот Stretch может перемещать до 800 коробок в час, что сравнимо с работой сотрудника-человека. Stretch установлен на квадратной мобильной базе, оснащен колесами, «мачтой восприятия» с камерами и другими датчиками, а также роборукой с семью степенями свободы, которая может захватывать и перемещать коробки весом до 23 кг.
+
+                Stretch — это первый робот Boston Dynamics, который был специально построен для складских помещений. Существует множество стационарных робоманипуляторов, но их минус заключается в дорогостоящей установке, необходимости переделывать инфраструктуру склада и моделировать рабочий процесс вокруг робота. Stretch, напротив, обеспечит автоматизацию среды там, где для этого нет подходящей инфраструктуры. Робота можно отправить в кузов грузовика, в проходы склада или к конвейерам. Мобильность позволяет Stretch выполнять работу в соответствии с потребностями склада без необходимости что-либо переделывать или устанавливать. 
+                
+                Как отмечают в Boston Dynamics, Stretch даст компании возможность сотрудничать с клиентами, автоматизация склада для которых была бы слишком дорогой или времязатратной. На сегодня 80% складов в мире не имеют возможности автоматизации с использованием стационарных роботов, что дает компании значительный доступный рынок.
+                </p>
+        </div>
+
+        <div class="article">
+            <h2 class="article-title">НАСА обновило предполагаемый облик грузовика для лунной станции Dragon XL производства SpaceX </h2>
+            <p class="article-category">Космос</p>
+            <img class="article-image" src="img/article2_pic.jpg" alt="">
+            <p class="article-text">Национальное управление США по воздухоплаванию и исследованию космического пространства выпустило новый концепт-арт грузового корабля SpaceX Dragon XL, который предназначен для доставки грузов на окололунную орбитальную станцию Gateway. НАСА объявило о заключении контракта с компанией SpaceX в пятницу.
+
+                В рамках контракта SpaceX компания должна отправить как минимум два космических корабля Dragon XL с грузом. Грузовик будет запущен на ракете Falcon Heavy и будет находиться у станции от шести месяцев до года. SpaceX стала первым коммерческим партнером по доставке грузов на станцию, строительство которой начнется в 2022 году.</p>
+        </div>
+    </div>
 </body>
 </html> 
